Create UserDto & UserDtoResponse for User Model.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 server.port=8080
 
 #Monodb Configuration
-#spring.data.mongodb.database=phonebookmaster
-#spring.data.mongodb.username=
-#spring.data.mongodb.password=
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+
 spring.data.mongodb.uri=mongodb://localhost:27017/phonebookmaster
 
 
@@ -14,3 +10,18 @@ spring.data.mongodb.uri=mongodb://localhost:27017/phonebookmaster
 #logging.level.org.springframework.data=debug
 #logging.level.=error
 #debug = true
+
+
+##log4j configure
+#
+## Define the root logger with appender file
+log4j.rootLogger= DEBUG,console, DB
+log4j.appender.MongoDB.hostname=localhost
+log4j.appender.MongoDB.databaseName=phonebookmaster
+
+log4j.appender.MongoDB.port=27017
+#
+log4j.appender.DB.sql=INSERT INTO LOGS VALUES('%x','%d','%C','%p','%m')
+#
+## Define the layout for file appender
+log4j.appender.DB.layout=org.apache.log4j.PatternLayout
