--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/phonebookmaster
 #
 #logging.level.org.springframework.data=debug
 #logging.level.=error
-#debug = true
+debug = true
 
 
 ##log4j configure
