--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/phonebookmaster
 #
 #logging.level.org.springframework.data=debug
 #logging.level.=error
-debug=true
+#debug=true
 ##log4j configure
 #
 ## Define the root logger with appender file
